samples/_failures_safe/1761522960_0e56c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63e336e5.c: In function ‘main’:
./samples/SAFE/__tmp_63e336e5.c:137:5: error: expected expression at end of input
  137 |     if (
      |     ^~
./samples/SAFE/__tmp_63e336e5.c:137:5: error: expected declaration or statement at end of input
